--- a/contact.html
+++ b/contact.html
@@ -2,10 +2,43 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact</title>
+    <link href="styles/styles.css" rel="stylesheet" text="text/css">
 </head>
 <body>
-    <h1>Contact</h1>
+    <div class="box"><span class="logo"><img src="img/logo.gif" alt="logo" title="Ederes Gure: Website"></span></div>
+
+    <div class="nav">
+        <ul id="nav-list">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html"><span class="deadnav">Contact</span></a></li>
+            <li><a href="links.html">Links</a></li>
+        </ul>
+    </div>
+
+    <div class="left">Left</div>
+    <div class="centre">Centre</div>
+    <div class="right">Right</div>
+
+    <div class="lower_nav">
+        <ul id="nav-list">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html"><span class="deadnav">Contact</span></a></li>
+            <li><a href="links.html">Links</a></li>
+        </ul>
+    </div>
+
+    <div class="legal"> 
+        <ul id="nav-list"> 
+            <li><a href="copyright.html">&copy; 2021 Bernie Monette. All rights reserved.</a></li>
+            <li><a href="privacy.html">Privacy</a></li>
+            <li><a href="terms.html">Terms of Use</a></li>
+        </ul>
+    </div>
 </body>
 </html>
