--- a/copyright.html
+++ b/copyright.html
@@ -3,11 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Copyright</title>
+    <link href="styles/styles.css" rel="stylesheet" text="text/css">
 </head>
 <body>
-    <h1>Copyright</h1>
+    <div class="box"><span class="logo"><img src="img/logo.gif" alt="logo" title="Ederes Gure: Website"></span></div>
 
-    <p></p>
+    <div class="nav">
+        <ul id="nav-list">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="links.html">Links</a></li>
+        </ul>
+    </div>
+
+    <div class="left">Left</div>
+    <div class="centre">Centre</div>
+    <div class="right">Right</div>
+
+    <div class="lower_nav">
+        <ul id="nav-list">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="links.html">Links</a></li>
+        </ul>
+    </div>
+
+    <div class="legal"> 
+        <ul id="nav-list"> 
+            <li><a href="copyright.html"><span class="deadnav">&copy; 2021 Bernie Monette. All rights reserved.</span></a></li>
+            <li><a href="privacy.html">Privacy</a></li>
+            <li><a href="terms.html">Terms of Use</a></li>
+        </ul>
+    </div>
 </body>
 </html>
