--- a/smallwebsite.html
+++ b/smallwebsite.html
@@ -10,8 +10,8 @@
     <div class="box"><span class="logo"><img src="img/logo.gif" alt="logo" title="Ederes Gure: Website"></span></div>
 
     <div class="nav">
-        <ul id="navlist">
-            <li><a href="index.html">Home</a></li>
+        <ul id="nav-list">
+            <li><a href="index.html"><span class="deadnav">Home</span></a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
@@ -24,8 +24,8 @@
     <div class="right">Right</div>
 
     <div class="lower_nav">
-        <ul id="navlist">
-            <li><a href="index.html">Home</a></li>
+        <ul id="nav-list">
+            <li><a href="index.html"><span class="deadnav">Home</span></a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
@@ -34,7 +34,7 @@
     </div>
 
     <div class="legal"> 
-        <ul id="navlist"> 
+        <ul id="nav-list"> 
             <li><a href="copyright.html">&copy; 2021 Bernie Monette. All rights reserved.</a></li>
             <li><a href="privacy.html">Privacy</a></li>
             <li><a href="terms.html">Terms of Use</a></li>
